--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     <div class="container">
     <center>
         <a href="" id="link" download="myselfie.png"></a>
-        <h1>Voice Selfie App
-            <img src="Lakshya.png" id="logo_img">
-        </h1>
+        <h1>Voice Selfie App</h1>
         <hr>
         <h4 style="color:rgb(230, 24, 24);"><b>Please press allow as soon as popup comes. After you give a voice command</b></h4>
         
